--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Mickey Bot",
+  "name": "ʀɪsʜɪᴋᴀ",
   "description": "A telegram bot",
   "logo": "https://graph.org/file/f9619ffdbc6fcd5ad9d9b.jpg",
   "keywords": [
