--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "buildpacks": [{
     "url": "heroku/python"
   }],
-  "repository": "https://github.com/NobitaRdX/ChatBot",
+  "repository": "https://github.com/NOBITA-RDX/RDX-CHTBOTX",
   "env": {
     "API_ID": {
       "description": "Get this value from my.telegram.org/apps.",
